--- a/main.html
+++ b/main.html
@@ -10,7 +10,42 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<!DOCTYPE html>
 
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+	<nav id="n1">
+		<ul>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#aboutus">About us</a></li>
+			<li><a href="#Contactus">Contact us</a></li>
+		</ul>
+	</nav>
+	<div class="demo">
+	<h1 class="heading">3 random videos</h1>
+	<video  width="300px" controls>
+		 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+	</video>
+	<video width="300px" controls>
+		 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+	</video>
+	<video  width="300px" controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+	</video>
+</div>
+</body>
+
+</html>
 </body>
 
 </html>
